Sync project all files to realign git

--- a/force-app/main/default/layouts/GGW_Content_Block__c-Content Block Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Content_Block__c-Content Block Layout.layout-meta.xml
@@ -7,7 +7,7 @@
         <label>Information</label>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Readonly</behavior>
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
@@ -59,10 +59,6 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
-    <relatedLists>
-        <fields>NAME</fields>
-        <relatedList>GGW_Selected_Item__c.Selected_Block__c</relatedList>
-    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
