Add section reorder modal box option instead of drag

--- a/force-app/main/default/layouts/GGW_Section__c-GGW Section Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Section__c-GGW Section Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>Sort_Order__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Section_Details__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
