--- a/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
@@ -15,6 +15,14 @@
                 <behavior>Edit</behavior>
                 <field>Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Description__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Application_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
