Update metadata to fit with CDO or dev org type, remove appMenue, chnge report dash folders sharing email and remove from homPage layout standard-Tags

--- a/force-app/main/default/reports/GGWReports.reportFolder-meta.xml
+++ b/force-app/main/default/reports/GGWReports.reportFolder-meta.xml
@@ -2,7 +2,7 @@
 <ReportFolder xmlns="http://soap.sforce.com/2006/04/metadata">
     <folderShares>
         <accessLevel>Manage</accessLevel>
-        <sharedTo>test-kdhrnflzy1zq@example.com</sharedTo>
+        <sharedTo>iandrosov@grants.lab.demo</sharedTo>
         <sharedToType>User</sharedToType>
     </folderShares>
     <name>GGW Reports</name>
