Add relationship from Child Grant to parent Opportunity and pull Oppty fields Amount, Account, Stage, Probability, Type as cross object references to Grant Application record.

--- a/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
@@ -29,6 +29,18 @@
                 <behavior>Edit</behavior>
                 <field>OwnerId</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Opportunity__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Opportunity_Amount__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Opportunity_Account_Name__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -92,7 +104,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1D000006tEDW</masterLabel>
+        <masterLabel>00h630000074SW8</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
