--- a/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.css
+++ b/force-app/main/default/lwc/ggwGrantApplication/ggwGrantApplication.css
@@ -1,1 +1,11 @@
-h1 {}
+.c-container {
+    border: 1px solid #d8dde6;
+    margin: 10px 0 20px 0;
+}
+
+ .custom-box {
+    text-align: center;
+    background-color: #f4f6f9;
+    padding: 1rem;
+    border: 1px solid #d8dde6;
+}
