--- a/force-app/main/default/pages/GGW_GrantPreview.page
+++ b/force-app/main/default/pages/GGW_GrantPreview.page
@@ -1,4 +1,4 @@
-<apex:page standardController="GGW_Grant_Application__c" extensions="GGW_ExportCtrl" showHeader="false" applyBodyTag="false" renderAs="pdf">
+<apex:page standardController="GGW_Grant_Application__c" extensions="GGW_ExportCtrl" showHeader="false" applyBodyTag="false" renderAs="html">
     
     <head>
         <title>Grant Application: {!appName}</title>
@@ -10,10 +10,13 @@
     </head>
     <body>
 
+        <img id="logoImage" src="{!logoURL}" width="100" height="100" alt="Grant Logo"/>
+        <br/>
         <h1 id='temp:C:CQJeb278781ebae4fa1a2a1ac42b'>
             <b><span style="color:#181818" textcolor="#181818">{!appName}</span></b>
         </h1>
 
+        <br/>
         <apex:repeat value="{!items}" var="item" id="theItemRepeat">
             <h3 id='temp:C:CQJ7784f8c1101544c3b3dc3f648'>
                 <b><span style="color:#181818" textcolor="#181818">
