#85 feature POC commit language selevct UI

--- a/force-app/main/default/layouts/GGW_Content_Block__c-Content Block Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Content_Block__c-Content Block Layout.layout-meta.xml
@@ -22,6 +22,10 @@
                 <behavior>Edit</behavior>
                 <field>Section__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Language__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
