--- a/force-app/main/default/layouts/GGW_Section__c-GGW Section Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Section__c-GGW Section Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>Section_Details__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Language__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
