--- a/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Grant_Application__c-Grant Application Layout.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Edit</behavior>
                 <field>DistributionPublicUrl__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Language__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
