--- a/force-app/main/default/layouts/GGW_Grant_State__c-GGW Grant State Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Grant_State__c-GGW Grant State Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Edit</behavior>
                 <field>Grant_Application__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Language__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
