Add group of supported languages, add language fileter on sections

--- a/force-app/main/default/layouts/GGW_Selected_Item__c-Selected Item Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/GGW_Selected_Item__c-Selected Item Layout.layout-meta.xml
@@ -40,7 +40,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>Langauge__c</field>
+                <field>Language__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns/>
