--- a/force-app/main/default/pages/GGW_GrantPreview.page
+++ b/force-app/main/default/pages/GGW_GrantPreview.page
@@ -7,6 +7,7 @@
         
         <style></style>
         <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/gww_grant_preview.css')}"/>
+
     </head>
     <body>
 
@@ -20,6 +21,8 @@
         </h1>
 
         <br/>
+        <button class="btn" onclick="copyContent()">Copy!</button>
+            
         <apex:repeat value="{!items}" var="item" id="theItemRepeat">
             <h3 id='temp:C:CQJ7784f8c1101544c3b3dc3f648'>
                 <b><span style="color:#181818" textcolor="#181818">
@@ -27,12 +30,28 @@
                 </span></b>
             </h3>
 
+             
+
             <span style="color:#181818" textcolor="#181818">
                 <apex:outputText value="{!item.Text_Block__c}" escape="false" id="textBlock"/>
             </span>
             <br/>
 
         </apex:repeat>
+
+        <script type="text/javascript">
+            function copyContent() {
+                let text = document.getElementById('j_id0:theItemRepeat:1:textBlock').innerHTML;
+                console.log(`### ${text}`);
+              try {
+                navigator.clipboard.writeText(text);
+                console.log('Content copied to clipboard');
+              } catch (err) {
+                console.error('Failed to copy: ', err);
+              }
+            }
+        </script>
+
     </body>
 
 </apex:page>
