--- a/force-app/main/default/pages/GGW_GrantPreview.page
+++ b/force-app/main/default/pages/GGW_GrantPreview.page
@@ -4,10 +4,12 @@
         <title>Grant Application: {!appName}</title>
         <meta charset="UTF-8"></meta>
         <link href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic|Roboto:400,700,700italic,400italic" rel="stylesheet" type="text/css"></link>
-        
-        <style></style>
-        <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/gww_grant_preview.css')}"/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
 
+        <style></style>
+
+        <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/gww_grant_preview.css')}"/>
+        
     </head>
     <body>
 
@@ -21,35 +23,57 @@
         </h1>
 
         <br/>
-        <button class="btn" onclick="copyContent()">Copy!</button>
+        
             
         <apex:repeat value="{!items}" var="item" id="theItemRepeat">
-            <h3 id='temp:C:CQJ7784f8c1101544c3b3dc3f648'>
+            <h3 id='tempSectionHeader'>
                 <b><span style="color:#181818" textcolor="#181818">
                     <apex:outputText value="{!item.Section_Name__c}" id="sectionName"/>
+                    
                 </span></b>
             </h3>
 
-             
+            <button id="copyBtn" class="btn" onclick="copyContent('{!$Component.theItemRepeat.textBlock}')"><i class="fa fa-copy"></i></button>
 
-            <span style="color:#181818" textcolor="#181818">
+            <span id="tempTextSpan" style="color:#181818" textcolor="#181818">
                 <apex:outputText value="{!item.Text_Block__c}" escape="false" id="textBlock"/>
             </span>
+
             <br/>
 
         </apex:repeat>
 
         <script type="text/javascript">
-            function copyContent() {
-                let text = document.getElementById('j_id0:theItemRepeat:1:textBlock').innerHTML;
-                console.log(`### ${text}`);
+            function copyContent(itemId) {
+                let text = document.getElementById(itemId).innerHTML;
+                //console.log(`### ${text}`);
+
               try {
-                navigator.clipboard.writeText(text);
+                let tempText = text.replace( /(<([^>]+)>)/ig, ''); // clear all HTML rich tags
+                copyTextToClipboard(tempText);
                 console.log('Content copied to clipboard');
               } catch (err) {
                 console.error('Failed to copy: ', err);
               }
+              
             }
+
+            function copyTextToClipboard(text) { 
+                var textArea = document.createElement("textarea"); 
+                textArea.value = text; 
+                textArea.style.position="fixed"; //avoid scrolling to bottom 
+                document.body.appendChild(textArea); 
+                textArea.focus(); 
+                textArea.select(); 
+                try { 
+                    var successful = document.execCommand('copy'); 
+                    var msg = successful ? 'successful' : 'unsuccessful'; 
+                    //console.log(`Fallback: Copying text command was ${msg}`); 
+                } catch (err) { 
+                    //console.error(`Fallback: Oops, unable to copy`, err); 
+                } 
+                document.body.removeChild(textArea); 
+            } 
         </script>
 
     </body>
