Remove inline styles in HTML

--- a/force-app/main/default/staticresources/GGWStyles/resources/css/gww_grant_preview.css
+++ b/force-app/main/default/staticresources/GGWStyles/resources/css/gww_grant_preview.css
@@ -490,3 +490,7 @@ div[data-section-style="6"] ul ul ul ul ul li:before {
 div[data-section-style="6"] ul ul ul ul ul ul li:before {
     content: counter(indent5, lower-roman) ". ";
 }
+
+ggw-span-text {
+    color:#181818;
+}
