--- a/force-app/main/default/pages/GGW_GrantPreview.page
+++ b/force-app/main/default/pages/GGW_GrantPreview.page
@@ -19,25 +19,25 @@
         </apex:outputPanel>
 
         <h1 id='temp:C:CQJeb278781ebae4fa1a2a1ac42b'>
-            <b><span style="color:#181818" textcolor="#181818">{!appName}</span></b>
+            <b><span class="ggw-span-text">{!appName}</span></b>
         </h1>
 
         <br/>
         
-            
         <apex:repeat value="{!items}" var="item" id="theItemRepeat">
             <h3 id='tempSectionHeader'>
-                <b><span style="color:#181818" textcolor="#181818">
-                    <apex:outputText value="{!item.Section_Name__c}" id="sectionName"/>
-                    
-                </span></b>
+                <b>
+                    <span class="ggw-span-text">
+                        <apex:outputText value="{!item.Section_Name__c}" id="sectionName"/>    
+                    </span>
+                </b>
             </h3>
 
             <button id="copyBtn" class="btn" onclick="copyContent('{!$Component.theItemRepeat.textBlock}')"><i class="fa fa-copy"></i></button>
-
-            <span id="tempTextSpan" style="color:#181818" textcolor="#181818">
-                <apex:outputText value="{!item.Text_Block__c}" escape="false" id="textBlock"/>
-            </span>
+            
+            <span id="tempTextSpan" class="ggw-span-text">
+                <apex:outputText value="{!item.Text_Block__c}" escape="false" id="textBlock"/>    
+            </span>            
 
             <br/>
 
