Modified visualforce pages to use the fonts available in the GGWStyles static resource zip file.

--- a/force-app/main/default/pages/GGW_GrantPreview.page
+++ b/force-app/main/default/pages/GGW_GrantPreview.page
@@ -3,9 +3,9 @@
     <head>
         <title>Grant Application: {!appName}</title>
         <meta charset="UTF-8"></meta>
-        <link href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700,700italic|Roboto:400,700,700italic,400italic" rel="stylesheet" type="text/css"></link>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"></link>
-
+        <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/fonts.css')}"/>
+        <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/fontawesome.css')}"/>
+        
         <style></style>
 
         <apex:stylesheet value="{!URLFOR($Resource.GGWStyles, 'resources/css/gww_grant_preview.css')}"/>
